[project]
name = "agent-07"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Waheed Ahmad", email = "waheedahmad5519@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.15",
]

[project.scripts]
agent-07 = "agent_07:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
